--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,6 +3,7 @@
   "favourite": "Favourite",
   "start": "Let's start dating",
   "tinder_appbar": "What about good joke?",
+  "tinder_like": "Good choice bro :)",
   "mistake_header": "Oh, you made a mistake!",
   "mistake_text": "Nobody can dislike CHUCK!!!",
   "close_mistake": "Close",
