--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -3,6 +3,7 @@
   "favourite": "Избранное",
   "start": "Начать знакомства",
   "tinder_appbar": "Может шутку?",
+  "tinder_like": "Хороший выбор :)",
   "mistake_header": "А вот это уже было ошибкой!",
   "mistake_text": "Нельзя отказать Чаку!",
   "close_mistake": "Закрыть",
